--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Home test
+    Login
 {% endblock %}
 
 {% block body %}
-    <h1>Homepage</h1>
+    <h1>Login</h1>
 {% endblock %}
