--- a/templates/play.html
+++ b/templates/play.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Home test
+    Play
 {% endblock %}
 
 {% block body %}
-    <h1>Homepage</h1>
+    <h1>Play</h1>
 {% endblock %}
