--- a/templates/register.html
+++ b/templates/register.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Home test
+    Register
 {% endblock %}
 
 {% block body %}
-    <h1>Homepage</h1>
+    <h1>Register</h1>
 {% endblock %}
