--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,7 +31,10 @@
             </div>
         </div>
     </nav>
-    {% block body %}{% endblock %}
+    <main class="container-fluid py-5 text-center">
+        {% block body %}{% endblock %}
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
