--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Homepage</h1>
+    <h1>{{ player }}'s Bankroll: {{ cash }}</h1>
+    <form action="/" method="post">
+        <button class="btn btn-primary" type="submit">Play</button>
+    </form>
+    <!-- Can put more games here -->
 {% endblock %}
