--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="bg-light border navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">BertPoker</a>
+            <a class="navbar-brand" href="/"><img src="/static/icon2.png" alt="Home" width="30" height="30"> BertPoker</a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,6 +31,15 @@
             </div>
         </div>
     </nav>
+
+    {% if get_flashed_messages() %}
+            <header>
+                <div class="alert alert-primary mb-0 text-center" role="alert">
+                    {{ get_flashed_messages() | join(" ") }}
+                </div>
+            </header>
+    {% endif %}
+
     <main class="container-fluid py-5 text-center">
         {% block body %}{% endblock %}
     </main>
