Started websocket stuff

--- a/templates/play.html
+++ b/templates/play.html
@@ -5,6 +5,15 @@
 {% endblock %}
 
 {% block body %}
+
+    <!-- When I want to make multiple games playable at once (more than one room)
+    I can do something like this either on this template or on index.html -->
+    <!-- <div id="rooms-list">
+        <h4>ROOMS</h4>
+        {% for room in rooms %}
+            <p class="select-room">{{ room }}</p>
+        {% endfor %}
+    </div> -->
     <div id="info-bar">
 
 
