--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="bg-light border navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="/static/favicon.ico" alt="Home" width="30" height="30"> BertPoker</a>
+            <a class="navbar-brand" href="/"><!--<img src="/static/favicon.ico" alt="Home" width="30" height="30"> -->BertPoker</a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
