table.remove_player

--- a/templates/play.html
+++ b/templates/play.html
@@ -41,8 +41,8 @@
         <label for="bet-slider" class="form-label">Bet size: $<span id="slider-value"></span></label>
         <input type="range" class="form-range" min="0" max="{{ player.cash }}" step="0.01" value="0" id="bet-slider">
     </div>
-    <div class="inputs" id="sit-out-cash-out-buttons">
-
+    <div class="inputs" id="quit-button">
+        <button id="quit" type="button">Quit</button>
     </div>
     <div class="inputs" id="action-buttons">
         <button id="fold" type="button">Fold</button>
