add and remove player factored out into table class

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,13 @@
         <button class="btn btn-primary" type="submit">Play</button>
     </form>
     <hr>
-    <h3 class="text-start">Buyin: $10.00</h3>
+    <!-- <h3 class="text-start">Buyin: $10.00</h3>
     <div class="d-flex flex-row">
-        <div class="p-4"></div> <!-- Just to move the ready button onto the screen -->
+        <div class="p-4"></div>
         <div class="form-check form-switch text-start p-1">
             <input class="form-check-input" type="checkbox" role="switch" id="ready-toggle">
             <label class="form-check-label" for="ready-toggle">Ready?</label>
         </div>
         <div class="p-1">Matthew</div>
-    </div>
-    <!-- Can put more games here -->
+    </div> -->
 {% endblock %}
